Fix Dark mode.

--- a/sass/test.scss
+++ b/sass/test.scss
@@ -23,12 +23,12 @@ $font-color-dark: #246;
 
 
   :root {
-    --pale-saturation: calc(var(--base-saturation) / 4 );
+    --pale-saturation: calc(var(--base-saturation) / 10 );
     --background-color: hsl(var(--base-hue), var(--pale-saturation), 80%);
     --color: hsl(var(--base-hue), var(--pale-saturation), 20%);
     --hover-color: hsl(var(--base-hue), var(--pale-saturation), 40%);
     --header-background-color: hsl(var(--base-hue), var(--base-saturation), 20%);
-    --header-color: hsl(var(--base-hue), var(--base-saturation), 80%);
+    --header-color: hsl(var(--base-hue), var(--pale-saturation), 80%);
     --header-hover-color: hsl(var(--base-hue), var(--base-saturation), 60%);
   }
 
@@ -37,9 +37,9 @@ $font-color-dark: #246;
     --background-color: hsl(var(--base-hue), var(--pale-saturation), 20%);
     --color: hsl(var(--base-hue), var(--pale-saturation), 80%);    
     --hover-color: hsl(var(--base-hue), var(--pale-saturation), 20%);
-    --header-background-color: hsl(var(--base-hue), var(--base-saturation), 20%);
-    --header-color: hsl(var(--base-hue), var(--base-saturation), 80%);
-    --header-hover-color: hsl(var(--base-hue), var(--base-saturation), 60%);
+//    --header-background-color: hsl(var(--base-hue), var(--base-saturation), 20%);
+//    --header-color: hsl(var(--base-hue), var(--pale-saturation), 80%);
+//    --header-hover-color: hsl(var(--base-hue), var(--base-saturation), 60%);
   }
 }
 
@@ -48,7 +48,7 @@ body{
   font-family: var(--font-family);
   min-height: 100vh;
   /*font-family: 'Noto Serif JP', serif;*/
-  color: var(--font-color);
+  color: var(--color);
   background-color: var(--background-color);
   
   margin: 0;
